Sun Apr 29 03:02:02 2001  Tim Janik  <timj@gtk.org>

        * gtk/gtkpacker.h:
        * gtk/gtkenums.h: moved GtkAnchorType and GtkSideType from gtkpacker.h
	 to gtkenum.h.

	* gtk/gtkmain.c (gtk_main_do_event): silence compiler (GDK_SETTING not
	handled in switch).

	* gtk/Makefile.am:
	(gtk.defs): generate enum portions with  glib-mkenums.
	(gtktypebuiltins_evals.c): generate this with glib-mkenums.
	got rid of makeenums.pl and makeenums.awk in distributed tarballs.
	
	* gtk/gtkaccelgroup.c (gtk_accel_group_add): refined havocs warning
	addition.

	* docs/Changes-2.0.txt: keep a note on signal handlers now
	not getting emitted during the emission they were connected within.

2001-04-28  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkcolorsel.c (palette_new): fix bug in tooltip

2001-04-24  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_previous_line): 
	(gtk_text_layout_move_iter_to_next_line): fix these two for
	invisible text, lots of other stuff still hosed.

	* gtk/gtkcolorsel.c (gtk_color_selection_set_change_palette_hook):
	new function, replaces the get/set palette stuff. This function 
	is intended for use by libgnomeui which should set the hook to a
	thing which sets the palette in GConf, and we need the
	GConf-to-xsettings proxy which will result in the change being
	propagated back to the GTK app.

	* gtk/gtkaccelgroup.c (gtk_accel_group_add): add note to warning 
	about unusable signals that it may be because the signal has 
	parameters.

	* gtk/gtkwidget.c (gtk_widget_modify_style): always copy the
	style, otherwise gtkrc.c won't know to create a new GtkStyle for
	it.
	(gtk_widget_modify_color_component): call
	gtk_widget_modify_style() so the rc style will get copied.
	(gtk_widget_modify_font): ditto

	* gtk/gtkrc.c: make a couple variables static

	* gtk/gtkcolorseldialog.c (gtk_color_selection_dialog_init): hide
	help button by default, since it does nothing
