@@ -1,3 +1,8 @@
+Sun Apr 29 20:13:40 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_get_columns): new function.
+	(gtk_tree_view_move_column_after): Clean up interface. 
+
 Sun Apr 29 03:02:02 2001  Tim Janik  <timj@gtk.org>
 
         * gtk/gtkpacker.h:
